# bot_moderator

./: .dockerignore  .gitignore  Dockerfile  Makefile  Procfile  README.md  cleaner.py  config.py  database.db-journal  db.py  docker-compose.yml  main copy.py  main.py  pyproject.toml  requirements.txt  setup.cfg  testfunc.py
.cache/nitpick/: merged-style.toml
.github/workflows/: main.yml  python-app.yml
archive/: add_user_mw.py  show_user_keyboard.py
core/: __init__.py  config.py  config_vars.py  db.py  main.py
core/database_functions/: db_functions.py  db_models.py  redis1.py  test_db.py
core/filters/: admin_filter.py  filters.py
core/handlers/: __init__.py  admin_group_handlers.py  admin_private_handlers.py  debug_handlers.py  service_handlers.py  user_group_handlers.py  user_private_handlers.py
core/handlers/callback_privatechat_functions/: callback_show_users.py
core/handlers/group_functions/: add_unblocks.py  mute_main.py  (+3 more)
core/keyboards/: show_user_keyboard.py
core/middlewares/: add_user_mw.py  admins_mw.py  config_mw.py
core/models/: data_models.py
core/services/: ban.py  db_manual_control.py  db_old_ids_cleaner.py  debug.py  help.py  mute.py  status.py  unmute.py  user_welcome.py
core/tests/: redis_test.py
core/utils/: add_user_to_db.py  create_redis_pool.py  delete_message.py  delete_message_with_delay.py  delete_old_ids.py  get_username_from_text.py  id_recognizer.py  is_chat_admin.py  list_of_admins_ids.py  restrict.py  send_report.py  text_checks.py
database_functions/: db_functions.py  db_main.py
group_functions/: add_unblocks.py  id_recognizer.py  mute.py  mute_old.py  testfunc.py
group_functions/mute_new/: mute_checks.py  mute_main.py
privatechat_functions/: bot_help.py  send_welcome.py  show_user.py  start.py  status.py  unmute.py
styles/: styleguide.toml
system_functions/: __init__.py  callback_show_users.py  delete_old_ids.py  echo.py  eraser.py  get_chat_id.py  id_recognizer.py  is_chat_admin.py  is_username.py  restrict.py  send_report.py  show_user_keyboard.py
utils/: commands.py
(+11 files in other folders)
