[tool.poetry]
name = "bot-moderator"
version = "0.1.0"
description = ""
authors = ["dimaboro-code <dimka.borovikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
aiocron = "^1.8"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
python-dotenv = "^1.0.0"
redis = "^5.0.6"
redis-om = "^0.3.1"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
