[tool.poetry]
name = "bot-moderator"
version = "0.1.0"
description = ""
authors = ["dimaboro-code <dimka.borovikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.30.0"
aiocron = "^1.8"
python-dotenv = "^1.0.0"
redis = "^5.0.6"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.19.2"
nitpick = "^0.35.0"
mypy = "^1.13.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[tool.nitpick]
style = "styles/nitpick-style-wemake.toml"

[tool.flake8]
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
